--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ ul, li{
 
 .topnav {
     top: 0;
+    left: 0;
     position: fixed;
     width: 100vw;
     height: 10vh;
@@ -59,7 +60,8 @@ ul, li{
     cursor: pointer;
     width: 8vh;
     height: 8vh;
-    position: relative;
+    position: fixed;
+    left: 0px;
     border-radius: 50%;
     transition: transform 0.3s ease-in-out;
     margin: 1vh;
@@ -241,8 +243,8 @@ footer{
 .theme-switch-wrapper {
     z-index: 100;
     position: fixed;
-    top: 6vw;
-    right: 3vw;
+    top: 40px;
+    right: 20px;
     display: flex;
     align-items: center;
 }
@@ -253,9 +255,9 @@ em {
 
 .theme-switch {
     display: inline-block;
-    height: 9.5vw;
+    height: 34px;
     position: relative;
-    width: 16vw;
+    width: 60px;
 }
 
 .theme-switch input {
