--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ input:checked + .slider:before {
 
 .slider.round:before {
     border-radius: 50%;
-    background-image: url("./Ressources/307307.svg");
+    background-image: url("../img/307307.svg");
 }
 
 .slider #sun {
@@ -323,7 +323,7 @@ input:checked + .slider:before {
         display: none;
         width: 8vw;
         height: 8vh;
-        background-image:url('assets/img/Copie_de_logo-white-transparentback_1.png');
+        background-image:url('../img/Copie_de_logo-white-transparentback_1.png');
     }
     li {
         list-style-type: none;
