--- a/assets/css/ratings.css
+++ b/assets/css/ratings.css
@@ -792,7 +792,7 @@ input:checked + .slider:before {
 
 .slider.round:before {
     border-radius: 50%;
-    background-image: url("./Ressources/307307.svg");
+    background-image: url("./assets/307307.svg");
 }
 
 .slider #sun {
@@ -800,5 +800,3 @@ input:checked + .slider:before {
     left: 13px;
     top: 7px;
 }
-
-
