Switch button has been fixed and variable size has been added

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,5 +1,5 @@
 /* - Custom files - */
-@import url('variables.homepage.css');
+@import url('variables.css');
 @import url('animations.homepage.css');
 @import url('article.homepage.css');
 @import url('carousel.homepage.css');
