--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -16,3 +16,11 @@
     --secondary-color-transparent: rgba(129, 140, 171, .7);
     --ternary-color: #818CAB;
 }
+
+:root {
+    /* Navbar and footer size vh */
+    --height-header-sm: 10vh; 
+    --height-header-md: 11vh;
+    --height-header-lg: 12vh;
+    --height-header-lf:
+}
