Switch button has been fixed and variable size has been added

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -22,5 +22,5 @@
     --height-header-sm: 10vh; 
     --height-header-md: 11vh;
     --height-header-lg: 12vh;
-    --height-header-lf:
+    --height-header-lf: 14vh;
 }
